# pyssem

./: .gitattributes  .gitignore  Collisions.ipynb  Dockerfile  LICENSE  LICENSE.txt  Plots.ipynb  README.md  avona_ii_summary.tex  create_best_models_plot.py  docker-compose.yml  leo_satellite_analysis.py  make.bat  model_runtime.txt  output.json  phase_timeline_analysis.py  plot_N_species_all_models.py  plot_anova_breakdown.py  plot_best_N_score_SNDB.py  pyproject.toml  readthedocs.yaml  requirements.txt  results.json  results.txt  scenario-properties-base.pkl  scenario-properties-baseline-1.pkl  scenario-properties-baseline-collision.pkl  scenario-properties-baseline-no-run.pkl  scenario-properties-baseline-no-run_14_shells.pkl  scenario-properties-baseline-no-run_24_shells.pkl  scenario-properties-baseline-no-run_5_shells.pkl  scenario-properties-baseline.pkl  scenario-properties-collision.pkl  scenario-properties-controller.pkl  scenario-properties-controller_orig.pkl  scenario-properties-elliptical-2.pkl  scenario-properties-elliptical.pkl  scenario-properties-frag-spread.pkl  scenario-properties-not-elliptical.pkl  scenario-properties-not_elliptical.pkl  (+23 more)
.github/: workflow.yml
.github/workflows/: python-publish-production.yml  python-publish.yml
OPUS/configuration/: bond_0k_25yr.csv  bond_0k_5yr.csv  bond_1000k_25yr.csv  bond_1000k_5yr.csv  bond_100k_25yr.csv  bond_100k_5yr.csv  bond_2000k_25yr.csv  bond_2000k_5yr.csv  bond_200k_25yr.csv  bond_200k_5yr.csv  bond_500k_25yr.csv  bond_500k_5yr.csv  bond_700k_25yr.csv  bond_700k_5yr.csv
propagation_tests/: __init__.py  run_propagation_benchmarks.py
pyssem/: Plots.ipynb  SEP-main.py  SEPS-One-Comparison-old.ipynb  SEPS-One-Comparison.ipynb  SEPS-data-comparisons.ipynb  Simple-Model.ipynb  Testing.ipynb  aiaa_boston.ipynb  amos_vnv.py  amos_vnv_summary.py  baseline_amos.json  clean_upload_folder.py  collision_test.py  comparison.ipynb  copy_plots_only.py  drag-test.ipynb  elliptical-2.ipynb  elliptical_launch.ipynb  elliptical_launch.py  example-sim-simple.json  example-sim.json  example_sim.json  example_sim_2.json  iadc_test.ipynb  just_debris.json  just_debris_2.json  just_debris_not_elliptical.json  just_debris_old.json  main_cntrl_new.ipynb  main_test.ipynb  main_test.py  main_test_cntrl.ipynb  main_test_opt.ipynb  main_test_spread.ipynb  model-profiler.py  model.py  monte_carlo_plot.py  monte_carlo_run.py  plot_anova_breakdown_with_components.py  plot_anova_component_breakdown.py  (+10 more)
pyssem/VnV/: B_pop_time_alt_wide.csv  D_pop_time_alt_wide.csv  N_pop_time_alt_wide.csv  S_pop_time_alt_wide.csv  pop_time_alt_mc.csv  pop_time_mc.csv  pop_time_mc_wide.csv  species_kmeans.py
pyssem/analysis/: jb2008_time_series.py  orbital_lifetime_bins.py  orbital_lifetime_jb2008.py
pyssem/output_alt/: pop_time.csv  pop_time_alt.csv
pyssem/simulation_configurations/: SEP1.json  SEP2.json  SEP3H.json  SEP3M.json  SEP4.json  SEP5H.json  SEP5M.json  SEP6H.json  SEP6M.json  adept-test.json  bond-pot.json  cluster_sep_species.json  cluster_sep_species_sym.json  elliptical-simple.json  elliptical-test.json  elliptical.json  example-sim-simple.json  example-sim.json  example.json  example_sim.json  frag_spread_test.json  geo.json  iadc.json  (+18 more)
source/: SEPs.rst  admin_inputs.rst  api.rst  conf.py  contents.rst  index.rst  model.rst  overall_scenario_properties.rst
(+122 files in other folders)
