[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project]
name = "pyssem"

dynamic = ["version"]

description = "A Python package for managing and analyzing simulations."
readme = "README.md"
authors = [{name = "Indigo Brownhall", email = "indigo.brownhall.20@ucl.ac.uk"}]
maintainers = [{name = "Indigo Brownhall", email = "indigo.brownhall.20@ucl.ac.uk"}]
license = {file = "LICENSE"}
keywords = ["Space Environment", "Modelling", "Space Debris", "SSEM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
            'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License', 
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10'
]
