[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project]
name = "pyssem"

dynamic = ["version"]

description = "A source sink model to support the study of the long-term sustainability of Low Earth Orbit (LEO)"
readme = "README.md"
authors = [{name = "Indigo Brownhall", email = "indigo.brownhall.20@ucl.ac.uk"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "setuptools>=68.0.0",
    "numpy>=1.2",
    "pandas>=2.0",
    "scipy>=1.10",
    "sympy>=1.11",
    "tqdm>=4.65",
    "gdown>=4.0.0",
    "requests>=2.0",
    "bs4",
    "matplotlib>=3.0.0",
    "loky>=3.0.0",
    "imageio>=2.0.0"
]